# AcrossPatientDecodingModel

./: .gitignore  README.md  README.rst  pyproject.toml
src/: movement_decoder.skops  run_model.py  settings.json
