[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[project]
name = "run_decoding_across_patients"
version = "0.0.1"
authors = [{ name = "Timon Merk", email = "timon.merk@charite.de" }]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: MIT License ",
  "Programming Language :: Python",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
description = "Real-time analysis of intracranial neurophysiology recordings."
keywords = [
  "real-time",
  "eeg",
  "ieeg",
  "dbs",
  "ecog",
  "electrocorticography",
  "deep-brain-stimulation",
  "machine-learning",
]
license = { file = "LICENSE" }
maintainers = [{ name = "Timon Merk" }]
readme = "README.rst"
requires-python = ">=3.10"

dependencies = ["py-neuromodulation", "skops>=0.9.0"]

[project.optional-dependencies]
dev = ["black", "pytest", "pytest-cov"]

[project.urls]
bugtracker = "https://github.com/neuromodulation/AcrossPatientDecodingModel/issues"
repository = "https://github.com/neuromodulation/AcrossPatientDecodingModel"

[tool.black]
exclude = '''
/(
  __pycache__
)/
'''
include = '''
(
  /src/
  # | /tests
)
'''
line-length = 80
target-version = ['py310']

[tool.flit.module]
name = "src"
